<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.6</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>javatechtask</groupId>
	<artifactId>kafka</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>kafka</name>
	<description>Demo project for Spring Boot and Kafka</description>
	<properties>
		<java.version>17</java.version>
    	<avro.version>1.11.0</avro.version>
	</properties>
	
    <!-- other maven repositories -->
    <repositories>
        <repository>
            <id>confluent</id>
            <url>https://packages.confluent.io/maven</url>
        </repository>
    </repositories>
    <!-- other maven repositories -->
    	
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.kafka</groupId>
			<artifactId>kafka-streams</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.apache.avro</groupId>
		    <artifactId>avro</artifactId>
		    <version>${avro.version}</version>
		</dependency>
		
		<dependency>
		    <groupId>io.confluent</groupId>
		    <artifactId>kafka-schema-registry-client</artifactId>
		    <version>7.1.0</version>
		</dependency>
		<dependency>
		    <groupId>io.confluent</groupId>
		    <artifactId>kafka-avro-serializer</artifactId>
		    <version>7.1.0</version>
		</dependency>
		<dependency>
		    <groupId>io.confluent</groupId>
		    <artifactId>kafka-streams-avro-serde</artifactId>
		    <version>7.1.0</version>
		</dependency>
		
		
    	<!-- ksqldb-api-client BEGIN -->
		<dependency>
		    <groupId>io.confluent.ksql</groupId>
		    <artifactId>ksqldb-api-client</artifactId>
		    <version>7.1.0</version>	    
		</dependency>	
		<dependency>
		    <groupId>io.confluent.ksql</groupId>
		    <artifactId>ksqldb-udf</artifactId>
		    <version>7.1.0</version>
		</dependency>
    	<!-- ksqldb-api-client END -->

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
					
					<!-- workaround: Reflective Call Into JDK -->
					<jvmArguments>
					--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
					</jvmArguments>
				</configuration>
			</plugin>
			
			<!-- avro-maven-plugin to generate classes for avro schemas -->
			<plugin>
				<groupId>org.apache.avro</groupId>
				<artifactId>avro-maven-plugin</artifactId>
				<version>${avro.version}</version>
				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>schema</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<sourceDirectory>${project.basedir}/src/main/resources/avro/</sourceDirectory>
					<outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
					<stringType>String</stringType>
				</configuration>				
			</plugin>
			
		</plugins>
	</build>

</project>
